fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/Invoiced_Sales_Detail__c.object-meta.xml
<CustomObject>
    <label>Invoiced Sales Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Invoiced Sales Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoiced Sales Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>