fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>if(AND(
Business_Unit__c = &quot;Interventional&quot;,
ISBLANK(Account__c)
), &quot;Interventional Adjustment&quot;,
if(AND(
Business_Unit__c = &quot;Anesthesia&quot;,
ISBLANK(Account__c)
), &quot;Anesthesia Adjustment&quot;,
if(AND(
Business_Unit__c = &quot;Surgical Disposables&quot;,
ISBLANK(Account__c)
), &quot;Surgical Disposables Adjustment&quot;,
if(AND(
Business_Unit__c = &quot;Vascular&quot;,
ISBLANK(Account__c)
), &quot;Vascular Adjustment&quot;,
if(AND(
Business_Unit__c = &quot;Respiratory&quot;,
ISBLANK(Account__c)
), &quot;Respiratory Adjustment&quot;,
if(AND(
Business_Unit__c = &quot;Surgical Instruments&quot;,
ISBLANK(Account__c)
), &quot;Surgical Instruments Adjustment&quot;,
Account__r.Name &amp; &quot; (&quot; &amp; Account__r.SAP_Sold_To__c &amp; &quot;)&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>