fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Check_UOM__c.field-meta.xml
<CustomField>
    <fullName>Check_UOM__c</fullName>
    <formula>/*VALUE(RIGHT(TEXT(Quantity__c / Product__r.Qty_Sales_Unit__c),FIND(TEXT(Quantity__c / Product__r.Qty_Sales_Unit__c), &quot;.&quot;))) */

MOD(Quantity__c,Product__r.Qty_Sales_Unit__c) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check UOM</label>
    <type>Checkbox</type>
</CustomField>