fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Commissionable_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Date__c</fullName>
    <label>Commissionable Date</label>
    <type>Date</type>
</CustomField>