fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Compensation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Profile__c</fullName>
    <label>Compensation Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>