fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Compensatory_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_Toggle__c</fullName>
    <formula>if(Compensatory__c = TRUE,&quot;Compensatory Sales&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensatory Toggle</label>
    <type>Text</type>
</CustomField>