fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Contract_Header__c.field-meta.xml
<CustomField>
    <fullName>Contract_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>Invoiced Sales Details</relationshipLabel>
    <relationshipName>Invoiced_Sales_Details</relationshipName>
    <type>Lookup</type>
</CustomField>