fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/DNA_Name__c.field-meta.xml
<CustomField>
    <fullName>DNA_Name__c</fullName>
    <label>DNA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>