fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Fiscal_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Date__c</fullName>
    <inlineHelpText>Date field that is populated using Apex and the Business Days object used for visualizing sales averages</inlineHelpText>
    <label>Fiscal Date</label>
    <type>Date</type>
</CustomField>