fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Fiscal_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Day_Number__c</fullName>
    <label>Fiscal Day Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>