fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Fiscal_MOM_Filter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_MOM_Filter__c</fullName>
    <formula>AND(
Fiscal_Day_Number__c &gt; 0,
Fiscal_Day_Number__c &lt;= Days_In__c,
Current_Fiscal_Month_Number__c = MONTH( Fiscal_Period_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal MOM Filter</label>
    <type>Checkbox</type>
</CustomField>