fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <label>Fiscal Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>