fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/FP_Based_on_Comn_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>FP_Based_on_Comn_Date_Text__c</fullName>
    <label>FP Based on Comn. Date Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>