fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/GPO_Name__c.field-meta.xml
<CustomField>
    <fullName>GPO_Name__c</fullName>
    <formula>IF(
Contract_Header__r.GPO_Contract__c = TRUE,
Contract_Header__r.Owner_Name__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO Name</label>
    <type>Text</type>
</CustomField>