fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Invoiced Sales Details (KAM)</relationshipLabel>
    <relationshipName>Invoiced_Sales_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>