fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/KAM_Sales_Toggle__c.field-meta.xml
<CustomField>
    <fullName>KAM_Sales_Toggle__c</fullName>
    <formula>if(NOT(ISBLANK(KAM__c)),&quot;KAM Sales&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAM Sales Toggle</label>
    <type>Text</type>
</CustomField>