fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>