fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Maintenance_Key__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Key__c</fullName>
    <label>Maintenance Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>