fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Previous_Fiscal_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fiscal_Month_Sales__c</fullName>
    <formula>AND( 
MONTH(   Date__c   ) &gt; Current_Fiscal_Month_Number__c, 
YEAR(Date__c) = YEAR(TODAY()) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Fiscal Month Sales</label>
    <type>Checkbox</type>
</CustomField>