fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoiced Sales Details</relationshipLabel>
    <relationshipName>Invoiced_Sales_Details</relationshipName>
    <type>Lookup</type>
</CustomField>