fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Sales_2_Digit__c.field-meta.xml
<CustomField>
    <fullName>Sales_2_Digit__c</fullName>
    <formula>Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales 2-Digit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>