fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <inlineHelpText>Sales Order Number / Sales Doc Number / Child</inlineHelpText>
    <label>Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>