fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Shared_Sales__c.field-meta.xml
<CustomField>
    <fullName>Shared_Sales__c</fullName>
    <formula>IF(AND(Territory_Number__c = &quot;800443&quot;,   OR($User.Alias = &quot;gwood&quot;, $User.Alias = &quot;tkleu&quot;) ),Sales__c * 0.1399995,
IF(AND(Territory_Number__c = &quot;800443&quot;,  OR($User.Alias = &quot;local&quot;, $User.Alias = &quot;GRothnie&quot;) ),Sales__c * 0.15,
IF(AND(Territory_Number__c = &quot;800443&quot;,  $User.Alias = &quot;JMcGuinn&quot;),Sales__c * 0.03,
IF(AND(Territory_Number__c = &quot;800443&quot;,  $User.Alias = &quot;KTindall&quot;),Sales__c * 0.14,
IF(AND(Territory_Number__c = &quot;800443&quot;,  $User.Alias = &quot;gstee&quot;),Sales__c * 0.25,IF(AND(Territory_Number__c = &quot;800420&quot;,  $User.Alias = &quot;KTindall&quot;),Sales__c * 1.00,IF(Territory_Number__c = &quot;800414&quot;,Sales__c * 0.50,IF(Territory_Number__c = &quot;800416&quot;,Sales__c * 0.50,IF(Territory_Number__c = &quot;800497&quot;,Sales__c * 1.00,IF(Territory_Number__c = &quot;800431&quot;,Sales__c * 0.50,IF(AND(Territory_Number__c = &quot;800450&quot;,  $User.Alias = &quot;cbosn&quot;),Sales__c * 0.15,IF(AND(Territory_Number__c = &quot;800450&quot;,  $User.Alias = &quot;abarl&quot;),Sales__c * 0.28,IF(AND(Territory_Number__c = &quot;800450&quot;,  $User.Alias = &quot;lpoul&quot;),Sales__c * 0.17,IF(AND(Territory_Number__c = &quot;800450&quot;,  $User.Alias = &quot;agrah&quot;),Sales__c * 0.40, IF(AND(Territory_Number__c = &quot;800477&quot;,  $User.Alias = &quot;sreut&quot;),Sales__c * 1.00,IF(AND(Territory_Number__c = &quot;800455&quot;,  OR($User.Alias = &quot;DMunro&quot;,$User.Alias = &quot;agill&quot;,$User.Alias = &quot;lmass&quot;,$User.Alias = &quot;klint&quot;) ),Sales__c * 0.25,IF(AND(Territory_Number__c = &quot;800462&quot;,  OR($User.Alias = &quot;cbosn&quot;,$User.Alias = &quot;abarl&quot;,$User.Alias = &quot;lpoul&quot;,$User.Alias = &quot;agrah&quot;) ),Sales__c * 0.25,IF(AND(Territory_Number__c = &quot;800468&quot;, OR($User.Alias = &quot;jgrah&quot;,$User.Alias = &quot;lloydy&quot;,$User.Alias = &quot;dthom&quot;) ),Sales__c * 0.50,IF(AND(Territory_Number__c = &quot;800478&quot;,OR($User.Alias =&quot;jplun&quot;,$User.Alias = &quot;hfaha&quot;) ),Sales__c * 0.50,IF(AND(Territory_Number__c = &quot;800480&quot;,  $User.Alias = &quot;mcasi&quot; ),Sales__c * 0.36,IF(AND(Territory_Number__c = &quot;800480&quot;,  $User.Alias = &quot;jalle&quot; ),Sales__c * 0.26,IF(AND(Territory_Number__c = &quot;800480&quot;,  $User.Alias = &quot;rdip&quot; ),Sales__c * 0.38,IF(Territory_Number__c = &quot;800483&quot;,Sales__c * 0.50,IF(AND(Territory_Number__c = &quot;800485&quot;,  $User.Alias = &quot;LBroo&quot; ),Sales__c * 0.33333333333333,IF(AND(Territory_Number__c = &quot;800485&quot;,  $User.Alias = &quot;MLegg&quot; ),Sales__c * 0.66666666666667,IF(AND(Territory_Number__c = &quot;801150&quot;,  $User.Alias = &quot;sbloe&quot; ),Sales__c * 0.70,IF(AND(Territory_Number__c = &quot;801150&quot;,  $User.Alias = &quot;rcoze&quot; ),Sales__c * 0.30,IF(AND(Territory_Number__c = &quot;899955&quot;,  $User.Alias = &quot;jland&quot; ),Sales__c * 0.18,IF(AND(Territory_Number__c = &quot;899955&quot;,  $User.Alias = &quot;jhorn&quot; ),Sales__c * 0.82,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;mcasi&quot; ),Sales__c * 0.20, IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;LBroo&quot; ),Sales__c * 0.09,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;jalle&quot; ),Sales__c * 0.03,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;rdip&quot; ),Sales__c * 0.10,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;MLegg&quot; ),Sales__c * 0.15,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;ndoyl&quot; ),Sales__c * 0.09,IF(AND(Territory_Number__c = &quot;800487&quot;,  $User.Alias = &quot;tmatt&quot; ),Sales__c * 0.13,IF(AND(Territory_Number__c = &quot;899955&quot;,  $User.Alias = &quot;kshaw&quot; ),Sales__c * 0.82, Sales__c)))))))))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>