fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>