fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Shipping_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Checkbox__c</fullName>
    <formula>NOT(ISBLANK(Shipping_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Info</label>
    <type>Checkbox</type>
</CustomField>