fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Shipping_Priority__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Priority__c</fullName>
    <inlineHelpText>Delivery Priority on the Tracking Object</inlineHelpText>
    <label>Shipping Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>