fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Shipping_Tracking_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking_Numbers__c</fullName>
    <label>Shipping Tracking Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>