fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <formula>Product__r.SubGroup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Group</label>
    <type>Text</type>
</CustomField>