fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <formula>IF(Shipping_Tracking__c != NULL,
HYPERLINK(Shipping_Tracking__c, Shipping_Priority__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>