fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Yesterday__c</fullName>
    <formula>if(TODAY() - 1 = Commissionable_Date__c, &quot;Yesterday&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yesterday</label>
    <type>Text</type>
</CustomField>