fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Detail__c/fields/Yesterday_Sales__c.field-meta.xml
<CustomField>
    <fullName>Yesterday_Sales__c</fullName>
    <formula>Commissionable_Date__c = Today()-1</formula>
    <label>Yesterday Sales</label>
    <type>Checkbox</type>
</CustomField>